--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
-spring.mvc.view.prefix=/WEB-INF/jsp/
-spring.mvc.view.suffix=.jsp
-spring.main.banner-mode=off
+spring.h2.console.enabled=true
 
-spring.jpa.show-sql=true
+spring.datasource.url=jdbc:h2:test
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-management.endpoints.web.exposure.include=health,beans,metrics,mappings
-
-real.db.enabled=true
+spring.mvc.view.prefix: /WEB-INF/jsp/
+spring.mvc.view.suffix: .jsp
